--- a/software.html
+++ b/software.html
@@ -40,15 +40,15 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999692432163-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999692431962-principal-software-engineer'>Eurofins Principal Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999692432287--full-time-positions-senior-software-engineer-accept-visa-candidates-salary-140-180k'>Bey (Full-Time Positions) Senior Software Engineer??- Accept Visa Candidates - Salary: $140-180K | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/vonage/jobs/4258912002'>Job Application for Software Engineer III - Full Stack Developer at Vonage</a></h5> 
@@ -79,11 +79,11 @@
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692428731-senior-backend-software-engineer-java'>Netcentric Senior Backend Software Engineer - Java | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692428731-senior-backend-software-engineer-java'>Netcentric Senior Backend Software Engineer - Java | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAYaVfwn&k=Job&j=orC39fwZ&__jvst=Employee&__jvsd=sYG29gwA&__jvsc=Twitter&bid=nrMBWLw0'>ExtraHop Networks, Inc. Careers - Software Engineer, Cloud</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAYaVfwn&k=Job&j=orC39fwZ&__jvst=Employee&__jvsd=sYG29gwA&__jvsc=Twitter&bid=nrMBWLw0'>ExtraHop Networks, Inc. Careers - Software Engineer, Cloud</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on:: 2019-07-29</p>
 <hr/>
@@ -91,7 +91,7 @@
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/loandepot/job/oGLAafwV'>loanDepot Careers - Senior Software Developer in Test (SDET)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/loandepot/job/oGLAafwV'>loanDepot Careers - Senior Software Developer in Test (SDET)</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -231,7 +231,7 @@
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/ACF54E3ED4'>Wirecard Asia - Jobs: Software Engineer, Electronic Data Capturing & Customer Implementation - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/ACF54E3ED4'>Wirecard Asia - Jobs: Software Engineer, Electronic Data Capturing & Customer Implementation - Apply online</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -303,7 +303,12 @@
 <p><span class="badge badge-light">Bengaluru, India</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fullcontact.applytojob.com/apply/FZJTrKZpfB/Software-Engineer-Foundation-Team'>Software Engineer, Foundation Team - FullContact - Career Page</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nasuni/job/o1ECafwb'>Nasuni Careers - Senior Software Engineer - C++ Datapath ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>3 days ago ... Brief Description We are looking for experienced C++/Linux software engineer to 
+expand our distributed file system team. The Position Nasuni is expanding its?...</p>
+<hr/>
+<h5><a href='http://fullcontact.applytojob.com/apply/FZJTrKZpfB/Software-Engineer-Foundation-Team'>Software Engineer, Foundation Team - FullContact - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -353,7 +358,7 @@ thrives on delivering exceptional quality and functionality to customers....</p>
 <p>Jul 18, 2019 ... The future is being built today, and Johnson Controls is making that future more 
 productive, more secure and more sustainable. We are harnessing the.....</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -433,7 +438,7 @@ productive, more secure and more sustainable. We are harnessing the.....</p>
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/113134/jobs/4345528002'>Job Application for Sr. Software Engineer (Node.js) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4345528002'>Job Application for Sr. Software Engineer (Node.js) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -450,10 +455,6 @@ productive, more secure and more sustainable. We are harnessing the.....</p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4346442002'>Job Application for Sr. Software Engineer (Business Intelligence Solutions & Architect) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light">California, United States</span></p>
-<p>Posted on: 2019-07-28</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/113134/jobs/4369945002'>Job Application for Sr. Software Engineer (Node.js) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
